# hadoop-rpc-exploration

./: .gitignore  hadoop-rpc  hadoop-rpc-exploration.cabal  stack.yaml
app/: Main.hs
