name:                hadoop-rpc-exploration
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            http://github.com/michaxm/hadoop-rpc-exploration#readme
license:             BSD3
license-file:        LICENSE
author:              Axel Mannhardt
maintainer:          example@example.com
copyright:           2015 Axel Mannhardt
category:            Web
build-type:          Simple
-- extra-source-files:
cabal-version:       >=1.18

executable exploration
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , hadoop-rpc
                     , bytestring
                     , text
                     , split
                     , directory
  default-language:    Haskell2010
